Fixing alignment of sponsors.

--- a/src/main/webapp/assets/css/responsive.css
+++ b/src/main/webapp/assets/css/responsive.css
@@ -89,6 +89,7 @@
     width: 300px;
     padding: 20px; }
   #sponsors .spnsors-logo {
+    text-align: center;
     margin-bottom: 15px; }
   .blog-item .descr {
     padding: 0 15px 20px; }
